force-app/main/default/objects/Project__c/fields/MilestonesCompleted__c.field-meta.xml
<CustomField>
    <fullName>MilestonesCompleted__c</fullName>
    <description>The number of milestone records related to this project that have been completed.</description>
    <inlineHelpText>The number of milestone records related to this project that have been completed.</inlineHelpText>
    <label>Milestones Completed</label>
    <summaryFilterItems>
        <field>Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>