force-app/main/default/objects/Project__c/fields/MilestonesCount__c.field-meta.xml
<CustomField>
    <fullName>MilestonesCount__c</fullName>
    <description>The quantity of milestones records related to this project.</description>
    <inlineHelpText>The quantity of milestones records related to this project.</inlineHelpText>
    <label>Milestones Count</label>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>