force-app/main/default/objects/Project__c/fields/PercentCompletion__c.field-meta.xml
<CustomField>
    <fullName>PercentCompletion__c</fullName>
    <formula>MilestonesCompleted__c /  MilestonesCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>